# llm-providers

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  build.rs  migrate_json.py  providers.json  providers.schema.json
.github/workflows/: ci.yml
data/: providers.json
docs/: providers.md
examples/: filter_models.rs  simple_chat.rs
py/: Cargo.toml  README_PYTHON.md  pyproject.toml
py/src/: lib.rs
py/tests/: test_bindings.py
schemas/: pararouter-export-v1.json
src/: export.rs  lib.rs
