[package]
name = "llm_providers"
version = "0.2.0"
edition = "2021"
description = "A unified source of truth for LLM providers, models, pricing, and capabilities."
license = "MIT"
repository = "https://github.com/lipish/llm-providers"
authors = ["lipish <lipish.1@gmail.com>"]
readme = "README.md"
keywords = ["llm", "ai", "models", "pricing", "providers"]
categories = ["api-bindings", "science"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.5.0"

[dev-dependencies]
llm-connector = "0.6.1"
tokio = { version = "1", features = ["full"] }

[[example]]
name = "simple_chat"
path = "examples/simple_chat.rs"

[[example]]
name = "filter_models"
path = "examples/filter_models.rs"
