[package]
name = "llm_providers"
version = "0.14.0"
edition = "2024"
description = "A unified source of truth for LLM providers, models, pricing, and capabilities."
license = "MIT"
repository = "https://github.com/lipish/llm-providers"
authors = ["lipish <lipish.1@gmail.com>"]
readme = "README.md"
keywords = ["llm", "ai", "models", "pricing", "providers"]
categories = ["api-bindings", "science"]
build = "build.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
phf = { version = "0.11", features = ["macros", "serde"] }

[[bin]]
name = "llm_providers"
path = "src/bin/llm_providers.rs"

[dev-dependencies]
llm-connector = "0.6.1"
tokio = { version = "1", features = ["full"] }

[build-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[example]]
name = "simple_chat"
path = "examples/simple_chat.rs"

[[example]]
name = "filter_models"
path = "examples/filter_models.rs"
