[package]
name = "llm_providers_list"
version = "0.9.0"
edition = "2024"
description = "Python bindings for LLM Providers Registry"
license = "MIT"
repository = "https://github.com/lipish/llm-providers"
authors = ["lipish <lipish.1@gmail.com>"]
readme = "README_PYTHON.md"

[lib]
name = "llm_providers_list"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23.4", features = ["extension-module", "abi3-py38"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
llm_providers = { path = "../", version = "0.12.0" }
