[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[project]
name = "llm-providers-list"
version = "0.1.0"
description = "Python bindings for LLM Providers Registry"
authors = [{name = "lipi", email = "lipicoder@qq.com"}]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]
